BE-FEAT : JwtTokenUtils

--- a/back-end/src/main/resources/application.yml
+++ b/back-end/src/main/resources/application.yml
@@ -12,3 +12,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+jwt:
+  secret-key: ssafy_c207_secret_key
+  # 30 days
+  token.expired-time-ms: 2592000000
