BE-FEAT : Authentication with JwtToken

--- a/back-end/src/main/resources/application.yml
+++ b/back-end/src/main/resources/application.yml
@@ -14,6 +14,6 @@ spring:
         format_sql: true
 
 jwt:
-  secret-key: ssafy_c207_secret_key
+  secret-key: ssafy_9th_gwanju_c207_eoullim_secret_key
   # 30 days
   token.expired-time-ms: 2592000000
