--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
+    "openvidu-browser": "^2.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
