--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.5",
+    "twin.macro": "^3.4.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
