--- a/back-end-openvidu/src/main/resources/application.properties
+++ b/back-end-openvidu/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-
 server.port: 5000
 server.ssl.enabled: false
 
-OPENVIDU_URL: http://localhost:4443/
-OPENVIDU_SECRET: MY_SECRET
+#OPENVIDU_URL: http://localhost:4443/
+OPENVIDU_URL: https://i9c207.p.ssafy.io
+OPENVIDU_SECRET: ssafy207
 
 spring.datasource.url=jdbc:mysql://ssafy207.duckdns.org:3306/eoullim?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=ssafy
