--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "front-end",
+  "name": "package_library",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@tensorflow-models/facemesh": "^0.0.5",
+    "@tensorflow/tfjs": "^4.9.0",
+    "@tensorflow/tfjs-backend-wasm": "^4.9.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,7 +24,7 @@
     "recoil": "^0.7.7",
     "styled-components": "^6.0.5",
     "tensorflow-models": "^0.0.1",
-    "three": "^0.155.0",
+    "three": "^0.142.0",
     "twin.macro": "^3.4.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -53,5 +55,7 @@
   },
   "devDependencies": {
     "@types/three": "^0.154.0"
-  }
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
