BE-FEAT : logout with Redis #S09P12C207-347

--- a/back-end/src/main/resources/application.yml
+++ b/back-end/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  redis:
+    port: 6379
+    host: localhost
 
 jwt:
   secret-key: ssafy_9th_gwanju_c207_eoullim_secret_key
