BE-FEAT : openvidu 백엔드 서버 환경변수 수정

--- a/back-end-openvidu/src/main/resources/application.properties
+++ b/back-end-openvidu/src/main/resources/application.properties
@@ -1,16 +1,18 @@
 server.port: 5000
 server.ssl.enabled: false
 
-#OPENVIDU_URL: http://localhost:4443/
 OPENVIDU_URL: https://i9c207.p.ssafy.io
-OPENVIDU_SECRET: ssafy207
-
-spring.datasource.url=jdbc:mysql://ssafy207.duckdns.org:3306/eoullim?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=ssafy
-spring.datasource.password=ssafy207
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+OPENVIDU_SECRET: MY_SECRET
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=mysql
+
+spring.datasource.url=jdbc:mysql://${DB_URL}/eoullim?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
