--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@stomp/stompjs": "^7.0.0",
     "@tensorflow-models/facemesh": "^0.0.5",
     "@tensorflow/tfjs": "^4.9.0",
     "@tensorflow/tfjs-backend-wasm": "^4.9.0",
@@ -14,6 +15,8 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "axios": "^1.4.0",
     "openvidu-browser": "^2.28.0",
     "react": "^18.2.0",
@@ -22,6 +25,9 @@
     "react-scripts": "5.0.1",
     "react-webcam": "^7.1.1",
     "recoil": "^0.7.7",
+    "sockjs-client": "^1.6.1",
+    "stomp-websocket": "^2.3.4-next",
+    "stompjs": "^2.3.3",
     "styled-components": "^6.0.5",
     "tensorflow-models": "^0.0.1",
     "three": "^0.142.0",
