--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@mui/system": "^5.14.3",
     "@tensorflow-models/facemesh": "^0.0.5",
