--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-webcam": "^7.1.1",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "styled-components": "^6.0.5",
     "tensorflow-models": "^0.0.1",
     "three": "^0.142.0",
