--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "@types/sockjs-client": "^1.5.1",
     "@types/stompjs": "^2.3.5",
     "axios": "^1.4.0",
+    "net": "^1.0.2",
     "openvidu-browser": "^2.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -63,5 +64,6 @@
     "@types/three": "^0.154.0"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "proxy": "http://localhost:8081"
 }
