--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,6 +28,7 @@
     "openvidu-browser": "^2.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.1.1",
