--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -35,6 +35,11 @@ dependencies {
 	implementation 'org.webjars:stomp-websocket:2.3.3'							// Web Socket - Stomp
 	implementation 'org.springframework.kafka:spring-kafka'						// Spring Kafka
 	implementation 'org.webjars:webjars-locator-core'
+
+	// openvidu
+	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.28.0'
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
 	compileOnly 'org.projectlombok:lombok'										// Lombok
 	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'									// MySQL Connector J
