--- a/front-end/package.json
+++ b/front-end/package.json
@@ -32,6 +32,7 @@
     "net": "^1.0.2",
     "openvidu-browser": "^2.28.0",
     "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
