--- a/front-end/package.json
+++ b/front-end/package.json
@@ -41,6 +41,7 @@
     "react-webcam": "^7.1.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "screenfull": "^6.0.2",
     "sockjs-client": "^1.6.1",
     "stomp-websocket": "^2.3.4-next",
     "stompjs": "^2.3.3",
